# helix-server

./: .codeclimate.yml  .coveragerc  .dockerignore  .env-sample  .gitignore  0002_notification.py  Deployment.md  Dockerfile  Pipfile  README.copilot.md  README.md  api.Dockerfile  copilot.init.sh  docker-compose.yml  dramatiq.Dockerfile  find_bugs.sh  find_data_problems.sh  gh-docker-compose.yml  init.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  schema-latest.graphql  schema.graphql  secrets-sample.yml  worker.Dockerfile
.github/: pull_request_template.md
.github/workflows/: linter.yml  test_runner.yml
apps/common/: enums.py  utils.py
apps/contact/: enums.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/contextualupdate/: admin.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/contrib/: admin.py  commons.py  dataloaders.py  enums.py  filters.py  migrate_commands.py  models.py  mutations.py  redis_client_track.py  schema.py  serializers.py  tasks.py
apps/country/: admin.py  dataloaders.py  filters.py  models.py  mutations.py  schema.py  strawberry_filters.py  strawberry_order.py  strawberry_schema.py  test_filters.py
apps/crisis/: admin.py  apps.py  dataloaders.py  enums.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/entry/: admin.py  apps.py  constants.py  dataloaders.py  documents.py  enums.py  filters.py  models.py  mutations.py  receivers.py  schema.py  serializers.py  tasks.py  utils.py  views.py
apps/event/: admin.py  constants.py  dataloaders.py  enums.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/extraction/: filters.py  models.py  mutations.py  schema.py  serializers.py  views.py
apps/gidd/: apps.py  enums.py  filters.py  gh_filters.py  models.py  mutations.py  rest_filters.py  schema.py  serializers.py  tasks.py  types.py  views.py
apps/helixmigration/: apps.py  models.py
apps/notification/: enums.py  filters.py  models.py  mutations.py  schema.py
apps/organization/: dataloaders.py  enums.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/parking_lot/: admin.py  enums.py  filters.py  models.py  mutations.py  schema.py  serializers.py  views.py
apps/report/: apps.py  enums.py  filters.py  generators.py  models.py  mutations.py  receivers.py  schema.py  serializers.py  tasks.py  utils.py
apps/resource/: filters.py  models.py  mutations.py  schema.py  serializers.py
apps/review/: admin.py  apps.py  enums.py  filters.py  models.py  mutations.py  receivers.py  schema.py  serializers.py
apps/users/: admin.py  apps.py  dataloaders.py  enums.py  filters.py  models.py  mutations.py  password_validation.py  receivers.py  roles.py  schema.py  serializers.py  tasks.py  utils.py  views.py
copilot/: .workspace  buildspec.yml  pipeline.yml
copilot/api/: manifest.yml
copilot/django/: manifest.yml
copilot/django-server/: manifest.yml
copilot/dramatiq/: manifest.yml
copilot/dramatiq-server/: manifest.yml
copilot/redis-server/: manifest.yml
copilot/server/: manifest.yml
copilot/worker/: manifest.yml
deploy/configs/: uwsgi.ini
deploy/scripts/: dramatiq-entrypoint.sh  run_dev.sh  run_prod.sh  run_tasks.sh  s3_bucket_setup.sh
fixtures/: countries.json  old_geo_fixtures.csv  users.json
helix/: api_urls.py  auth.py  caches.py  celery.py  exceptions.py  external_urls.py  gidd_schema.py  openapi.py  permalinks.py  redis.py  s3_storages.py  schema.py  sentry.py  settings.py  storages.py  strawberry_graphql_overrides.py  strawberry_utils.py  tests.py  urls.py  wsgi.py
helix/aws/: secrets_manager.py
server/: Dockerfile  manage.py  pytest.ini  requirements.txt
server/fixtures/: contacts.json  geo_entities.json  organizations.json  users.json
server/helix/: asgi.py  schema.py  sentry.py  settings.py  urls.py  webhooks.py  wsgi.py
server/utils/: error_types.py  fields.py  (+8 more)
serverless/: .gitignore  README.md  config.sample  config.yml  destination_function.py  event-sample.json  lambda_function.py  package-lock.json  package.json  requirements.txt  serverless.yml  success_function.py
utils/: common.py  db.py  error_types.py  factories.py  fields.py  figure_filter.py  filters.py  middleware.py  mutation.py  pagination.py  permissions.py  serializers.py  tests.py  validations.py
(+818 files in other folders)
