[tool.poetry]
name = "helix-server"
version = "0.1.0"
description = ""
authors = ["Dev <dev@togglecorp.io>"]

[tool.poetry.dependencies]
python = "^3.8"
bleach = "==3.3.0"
boto3 = "==1.14.63"
celery = "==5.1.1"
django-cors-headers = "==3.4.0"
django-debug-toolbar = "==2.2"
django-enumfield = "==2.0.1"
django-extensions = "==3.0.4"
django-filter = "==2.3.0"
django-graphiql-debug-toolbar = "==0.1.4"
django-redis = "==4.12.1"
django-rest-framework = "==0.1.0"
django-ses = "==2.0.0"
django-storages = "==1.10.1"
djoser = "==2.0.3"
factory-boy = "==3.0.1"
filemagic = "==1.6"
graphene-django-extras = "==0.4.9"
graphene-django = "==2.13.0"
graphene-file-upload = "==1.2.2"
graphene-graphiql-explorer = "==0.0.1"
ipython = "*"
lxml = "==4.6.3"
mock = "==4.0.2"
openpyxl = "==3.0.6"
pdfkit = "==0.6.1"
psycopg2 = "==2.8"
requests = "*"
selenium = "==3.141.0"
sentry-sdk = "<0.20,>=0.10"
six = "==1.15"
turfpy = "==0.0.6"
django-otp = {version = "==1.0.6", extras = ["qrcode"]}
Django = ">=3.0,<3.1"
uWSGI = "*"

[tool.poetry.dev-dependencies]
pytest-django = "==3.9.0"
pytest-sugar = "==0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = ["apps"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "apps/experimental",
    "apps/typestubs"
]
reportMissingImports = true
reportMissingTypeStubs = false
