[tool.poetry]
name = "helix-server"
version = "0.1.0"
description = "Helix Server"
authors = ["Dev <dev@togglecorp.io>"]

[tool.poetry.dependencies]
boto3 = "^1.26.147"
bleach = "^6.0.0"
django-cors-headers = "3.4.0"
django-enumfield = "3.1"
django-filter = "2.3.0"
django-otp = {version = "1.0.6", extras = ["qrcode"]}
django-redis = "4.12.1"
django-rest-framework = "0.1.0"
django-ses = "2.0.0"
django-storages = "1.10.1"
factory-boy = "3.0.1"
filemagic = "1.6"
graphene-django = "2.15.0"
graphene-django-extras = "0.4.9"
graphene-file-upload = "1.2.2"
graphene-graphiql-explorer = "0.0.1"
ipython = "*"
lxml = "4.6.3"
mock = "4.0.2"
openpyxl = "3.0.6"
pdfkit = "0.6.1"
python = "^3.9.16"
requests = "*"
selenium = "3.141.0"
sentry-sdk = ">=1,<2"
six = "1.15"
turfpy = "0.0.6"
uWSGI = "*"
django-environ = "^0.8.1"
drf-yasg = {extras = ["validation"], version = "^1.21.5"}
psycopg2 = "^2.9.6"
djoser = "^2.2.0"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.1"
django = "4.0"
django-graphiql-debug-toolbar = "^0.2.0"
celery = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = ["apps"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "apps/experimental",
    "apps/typestubs"
]
reportMissingImports = true
reportMissingTypeStubs = false
